--- a/index.html
+++ b/index.html
@@ -13,19 +13,19 @@
 		<div class="col">
 			<div class="wrapper" style="width: 300px; height: 250px; background-color: #ffffff;"><h6 class="heading" style="width: 300px;">300x250</h6>
 				<iframe
-					title="300x250 300x250 - Sonrisa 1.1"
+					title="300x250 - Smile"
 					width="300"
 					height="250"
-					src="banners/300x250_-_Sonrisa_1_1/index.html"
+					src="Smile/300x250/CMS-Vax-Smile-300x250/index.html"
 					frameBorder="0"></iframe></div>
 		</div>
 		<div class="col">
 			<div class="wrapper" style="width: 300px; height: 250px; background-color: #ffffff;"><h6 class="heading" style="width: 300px;">300x250</h6>
 				<iframe
-					title="300x250 300x250 - Sonrisa 1.2"
+					title="300x250 - Sunrise"
 					width="300"
 					height="250"
-					src="banners/300x250_-_Sonrisa_1_2/index.html"
+					src="Sunrise/300x250/CMS-Vax-Sunrise-300x250/index.html"
 					frameBorder="0"></iframe></div>
 		</div>
 		<div class="col">
