--- a/index.html
+++ b/index.html
@@ -16,7 +16,7 @@
 					title="300x250 - Smile"
 					width="300"
 					height="250"
-					src="Smile/300x250/CMS-Vax-Smile-300x250/index.html"
+					src="/Smile/300x250/CMS-Vax-Smile-300x250/index.html"
 					frameBorder="0"></iframe></div>
 		</div>
 		<div class="col">
@@ -25,61 +25,61 @@
 					title="300x250 - Sunrise"
 					width="300"
 					height="250"
-					src="Sunrise/300x250/CMS-Vax-Sunrise-300x250/index.html"
+					src="/Sunrise/300x250/CMS-Vax-Sunrise-300x250/index.html"
 					frameBorder="0"></iframe></div>
 		</div>
 		<div class="col">
 			<div class="wrapper" style="width: 728px; height: 90px; background-color: #ffffff;"><h6 class="heading" style="width: 728px;">728x90</h6>
 				<iframe
-					title="728x90 728x90 - Sonrisa 2.1"
+					title="728x90 - Smile"
 					width="728"
 					height="90"
-					src="banners/728x90_-_Sonrisa_2_1/index.html"
+					src="/Smile/728x90/CMS-Vax-Smile-728x90/index.html"
 					frameBorder="0"></iframe></div>
 		</div>
 		<div class="col">
 			<div class="wrapper" style="width: 728px; height: 90px; background-color: #ffffff;"><h6 class="heading" style="width: 728px;">728x90</h6>
 				<iframe
-					title="728x90 728x90 - Sonrisa 2.2"
+					title="728x90 - Sunrise"
 					width="728"
 					height="90"
-					src="banners/728x90_-_Sonrisa_2_2/index.html"
+					src="/Sunrise/728x90/CMS-Vax-Sunrise-728x90/index.html"
 					frameBorder="0"></iframe></div>
 		</div>
 		<div class="col">
 			<div class="wrapper" style="width: 320px; height: 50px; background-color: #ffffff;"><h6 class="heading" style="width: 320px;">320x50</h6>
 				<iframe
-					title="320x50 320x50 - Sonrisa 4.1"
+					title="320x50 - Smile"
 					width="320"
 					height="50"
-					src="banners/320x50_-_Sonrisa_4_1/index.html"
+					src="/Smile/320x50/CMS-Vax-Smile-320x50/index.html"
 					frameBorder="0"></iframe></div>
 		</div>
 		<div class="col">
 			<div class="wrapper" style="width: 320px; height: 50px; background-color: #ffffff;"><h6 class="heading" style="width: 320px;">320x50</h6>
 				<iframe
-					title="320x50 320x50 - Sonrisa 4.2"
+					title="320x50 - Sunrise"
 					width="320"
 					height="50"
-					src="banners/320x50_-_Sonrisa_4_2/index.html"
+					src="/Sunrise/320x50/CMS-Vax-Sunrise-320x50/index.html"
 					frameBorder="0"></iframe></div>
 		</div>
 		<div class="col">
 			<div class="wrapper" style="width: 160px; height: 600px; background-color: #ffffff;"><h6 class="heading" style="width: 160px;">160x600</h6>
 				<iframe
-					title="160x600 160x600 - Sonrisa 3.2"
+					title="160x600 - Smile"
 					width="160"
 					height="600"
-					src="banners/160x600_-_Sonrisa_3_2/index.html"
+					src="/Smile/160x600/CMS-Vax-Smile-160x600/index.html"
 					frameBorder="0"></iframe></div>
 		</div>
 		<div class="col">
 			<div class="wrapper" style="width: 160px; height: 600px; background-color: #ffffff;"><h6 class="heading" style="width: 160px;">160x600</h6>
 				<iframe
-					title="160x600 160x600 - Sonrisa 3.1"
+					title="160x600 - Sunrise"
 					width="160"
 					height="600"
-					src="banners/160x600_-_Sonrisa_3_1/index.html"
+					src="/Sunrise/160x600/CMS-Vax-Sunrise-160x600/index.html"
 					frameBorder="0"></iframe></div>
 		</div>
 	</div>
